--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -5,4 +5,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p style="color: green; font-weight: bold;">
+        Database access has already been done on April 1, 2025 by Nathaniel Needham
+    </p>
 </div>
